--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="staylesheet" href="assets/style.css">
     <title>churascaria do pastel"</title>
 </head>
 <body>
 
     <main>
         <section id="container">
+            <article class="cartão">
+                <div class="cartao__conteudo">
+               <h3>aulas de matematica</h3>
+                </div class="cartão__conteudo__pergunta">
+                o que vocês vendem?
+                <div>
+                    <div class="cartão__conteudo__resposta">
+                        vendemos carnes de qualidade e pasteis deliciosos
+            </article>
+
+            <section id="container">
             <article class="cartão">
                 <div class="cartao__conteudo">
                <h3>aulas de matematica</h3>
